# GMTI-Rust

./: .gitignore  Cargo.toml  README.md  workspace.toml
core/: Cargo.toml
core/src/: lib.rs  prelude.rs
core/src/agp_interface/: detection.rs  mod.rs  pri.rs
core/src/math/: fft.rs  matrix.rs  mod.rs  stats.rs
core/src/processing/: buffer_pool.rs  clutter.rs  doppler.rs  mod.rs  range.rs
core/src/telemetry/: log.rs  metrics.rs  mod.rs
docs/: architecture.md  coverage_report.md  legacy_mapping.md  requirements.md  testing.md  validation.md
pyqt_visualizer/: README.md  geometry.py  main.py  requirements.txt
pyqt_visualizer/tests/: test_mapping.py
simulator/: Cargo.toml
simulator/configs/: default.yaml  scan.yaml  stare.yaml
simulator/src/: main.rs
simulator/src/generator/: profile.rs  template.rs
simulator/src/gui_bridge/: bridge.rs  mod.rs  model.rs
simulator/src/workflow/: config.rs  runner.rs
tools/scripts/: regen_baselines.sh  run_offline_scenarios.py  stream_iq_dataset.py
ui/qt/: CMakeLists.txt
ui/qt/src/: DataProvider.cpp  DataProvider.h  InputConfigurator.cpp  InputConfigurator.h  StatusGraph.cpp  StatusGraph.h  VisualizationWindow.cpp  VisualizationWindow.h  main.cpp
visualizer/: Cargo.toml
visualizer/src/: main.rs
