[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
description = "Offline driver and workflow orchestrator for the Rust GMTI core."
authors = ["Advanced GMTI Team <gmtiteam@example.com>"]

[dependencies]
gmticore = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
warp = "0.3"
tempfile = "3"
rand = "0.8"
