[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "time"] }
gmticore = { path = "../core" }
